# gu-rover-slam-sim

./: robot_archive.f3d
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch
robot_description/meshes/: left_big_pivot_1.stl  left_little_pivot_1.stl  right_big_pivot_1.stl  right_little_pivot_1.stl  wheel_1.stl  wheel_2.stl  wheel_3.stl  wheel_4.stl  wheel_5.stl  wheel_6.stl
robot_description/urdf/: robot.gazebo  robot.trans  robot.xacro
