<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>

  <maintainer email="syuntoku14@todo.todo">syuntoku14</maintainer>
  <license>MIT</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<exec_depend>xacro</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz2</exec_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>
</package>